objects/AC11__c.object
<CustomObject>
    <description>Test to merge
Test</description>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field_date_1__c</fullName>
        <label>field date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>field_email_1__c</fullName>
        <label>field email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1323</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AC11</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AC11 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC11s</pluralLabel>
    <recordTypes>
        <fullName>RecType_1</fullName>
        <active>true</active>
        <description>record type 1</description>
        <label>RecType 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecType_2</fullName>
        <active>true</active>
        <label>RecType 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecType_3</fullName>
        <active>true</active>
        <label>RecType 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecType_4</fullName>
        <active>true</active>
        <label>RecType 4</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>validation_rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( field_date_1__c )</errorConditionFormula>
        <errorMessage>Please give the details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_rule_2_email</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( field_email_1__c )</errorConditionFormula>
        <errorMessage>Give the email</errorMessage>
    </validationRules>
</CustomObject>